<resources>
    <string name="app_name">WP转APP-溪源</string>
    <string name="title_activity_post">PostActivity</string>
    <string name="about_me">
        "\n\n"

        "\tWP2APP是一个把使用Wordpress部署的网站转为App的应用，这是一个示例，可以根据不同网址，展现基本Wordpress建设的网站的文章、分类、搜索和标签等内容。"

        "在wp2app.cn的网站上，你可以自主生成你的原生wordpress网站的移动端App，完全原生代码，采用kotlin生成，原生，高效.\n\n"

        "在wp2app.cn上，你还可以提出你的定制需要，对你的worpdress网站和App定制，以适应你的业务。"

        "wp2app.cn为你的wordpress网站定制app和微信小程序，并可以扩展为商城小城，商城app，企业展示等.\n\n"
    </string>
    <string name="action_settings">Settings</string>

    <string name="empty_no_data">没有数据</string>
    <string name="network_error">网络有问题，请检查</string>

    <string name="is_loading">正在加载...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="wp_base_url">你的网址</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="title_activity_settings">设置</string>

    <string name="ok">确定</string>
    <string name="skip">跳过</string>
    <string name="next">下一步</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="cache_title">启用缓存</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="auto_wifi_update">仅使用Wifi进行自动更新</string>

    <string name="setting_clear_cache">清空缓存/数据</string>

    <string name="splashy_subtitle">Splash screen made easy</string>
    <string name="splashy">Splashy</string>
    <string name="splash_screen_made_easy">Splash screen made easy</string>
    <string name="logo">Logo</string>
    <string name="background">background</string>
    <string name="retry">Retry</string>

    <string name="title_activity_splash">wp转app工具</string>
    <string name="wp_site_url_error">此网址不是Wordpress合法网站，请检查</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_about">AboutActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
