<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.BaseUrlActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/address_url_layout"
        style="@style/TextInputLayout"
        android:layout_marginTop="80dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/wp_base_url">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/base_url_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.qmuiteam.qmui.layout.QMUIButton
        android:id="@+id/url_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="5dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/address_url_layout"
        android:text="@string/next"/>

    <com.qmuiteam.qmui.layout.QMUIButton
        android:id="@+id/btn_skip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="26dp"
        android:text="@string/skip"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>