<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/view_background"
    tools:context=".ui.activity.LoginActivity">

    <include layout="@layout/title_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_layout"
        style="@style/TextInputLayout"
        android:layout_marginTop="80dp"
        android:hint="@string/username">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/username_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/psw_layout"
        style="@style/TextInputLayout"
        android:hint="@string/password"
        app:passwordToggleEnabled="true">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorPrimary"
        android:enabled="true"
        android:onClick="onLogin"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>